--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -6,10 +6,6 @@
 
 {% endblock title %} 
 
-{% block create %}
-active
-{% endblock create %}
-
 {% block contenido %}
 
 <section class="page-section" id="services">
@@ -18,19 +14,19 @@ active
   <div class="container-xl">
 
     <div class="text-center">
-      <h2 class="section-heading text-uppercase">Registrar Productos</h2>
+      <h2 class="section-heading text-uppercase">Iniciar Sesion</h2>
       <h3 class="section-subheading text-muted">
-        Registro de Productos para la venta
+        Ingresa con tu cuenta
       </h3>
     </div>
 
-    <form action={% url "registrar_producto" %} method="POST" enctype='multipart/form-data'>
+    <form action="" method="POST">
       {% csrf_token %} {{formulario}}
 
       <br />
 
       <div class="d-grid gap-2">
-        <input class="btn btn-primary btn-xl text-uppercase" type="submit" value="Registrar" />
+        <input class="btn btn-primary btn-xl text-uppercase" type="submit" value="Iniciar Sesion" />
       </div>
     </form>
   </div>
