--- a/productos/templates/inicio.html
+++ b/productos/templates/inicio.html
@@ -1,60 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <title>Producto</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Productos</a>
+{% extends "template_base.html" %} 
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+{% block title %}   
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="nav nav-tabs">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href={% url "inicio" %}>Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link link-dark" href={% url "registrar_producto" %}>Registrar Producto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link link-dark" href={% url "mostrar_producto" %}>Buscar Producto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+<title>Producto</title>
 
-    <div class="container-xl">
-      <br />
-      <h1 class="text-center">Administrador de Productos Tecnologicos</h1>
-      <br />
-      <p lass="text-break">La diferentes paginas permitiran un Cotrol de los Productos en la Tienda</p>
-    </div>
+{% endblock title %}
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+{% block contenido %}
+
+<br />
+<br />
+<br />
+
+<header class="masthead">
+  <div class="container">
+      <div class="masthead-subheading">Bienvenidos a la Tienda</div>
+      <div class="masthead-heading text-uppercase">E-StoreAlvarado</div>
+  </div>
+</header>
+
+{% endblock contenido %}
