--- a/productos/templates/mostrar_producto.html
+++ b/productos/templates/mostrar_producto.html
@@ -1,108 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <title>Producto</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Productos</a>
+{% extends "template_base.html" %} 
+
+{% block title %}   
+
+<title>Producto</title>
+
+{% endblock title %}
+
+{% block list %}
+active
+{% endblock list %}
+
+{% block contenido %}
+
+<div class="container-xl">
+  <br />
+  <br />
+  <br />
+  <br />
+  <h1 class="text-center">Listado de Productos</h1>
+
+  <form action="">
+    {{formulario}}
+
+    <br />
+
+    <div class="d-grid gap-2">
+      <input class="btn btn-secondary" type="submit" value="Buscar" />
+    </div>
+  </form>
+
+  <br />
   
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-  
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="nav nav-tabs">
-              <li class="nav-item">
-                <a class="nav-link link-dark" aria-current="page" href={% url "inicio" %}>Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link-dark" href={% url "registrar_producto" %}>Registrar Producto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href={% url "mostrar_producto" %}>Buscar Producto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
+  {% if Productos %}
 
-    <div class="container-xl">
-
-        <h1 class="text-center">Listado de Productos</h1>
-
-        <form action="">
-            {{formulario}}
-
-            <br>
-
-            <div class="d-grid gap-2">
-                <input class="btn btn-secondary" type="submit" value="Buscar">
-            </div>
-
-        </form>
-
-        
-
-        <br>
-
-        {% if Productos %}
-
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Descripcion</th>
-                    <th scope="col">Categoria</th>
-                    <th scope="col">Precio</th>
-                    <th scope="col">Dolares</th>
-                    </tr>
-                </thead>                
-                <tbody>
-
-                    {% for Producto in Productos %} 
-                        <tr>
-                            <th scope="row">{{Producto.id}}</th>
-                            <td>{{Producto.nombre}}</td>
-                            <td>{{Producto.descripcion}}</td>
-                            <td>{{Producto.categoria}}</td>
-                            <td>{{Producto.precio}}</td>
-                            <td>{{Producto.precio_dolares}}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-
-        {% else %}
-
-            <p class="text-center">No hay Productos Cargados.</p>
-
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Nombre</th>
+        <!-- <th scope="col">Descripcion</th> -->
+        <th scope="col">Categoria</th>
+        <th scope="col">Precio</th>
+        <th scope="col">Dolares</th>
+        <th scope="col"></th>
+        {% if request.user.is_superuser == True %}
+        <th scope="col"></th>
+        <th scope="col"></th>
         {% endif %}
-    
-    <div>    
-    
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-</body>
-</html>
+      </tr>
+    </thead>
+    <tbody>
+      {% for Producto in Productos %}
+      <tr>
+        <th scope="row">{{Producto.id}}</th>
+        <td>{{Producto.nombre}}</td>
+        <!-- <td>{{Producto.descripcion}}</td> -->
+        <td>{{Producto.categoria}}</td>
+        <td>{{Producto.precio}}</td>
+        <td>{{Producto.precio_dolares}}</td>
+        <td><a href={% url "detalle_producto" Producto.id %}>Detalle</a></td>
+        {% if request.user.is_superuser == True %}
+        <td><a href={% url "modificar_producto" Producto.id %}>Editar</a></td>
+        <td><a href={% url "eliminar_producto" Producto.id %}>Eliminar</a></td>
+        {% endif %}
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+  {% else %}
+
+  <p class="text-center">No hay Productos Cargados.</p>
+
+  {% endif %}
+</div>
+
+{% endblock contenido %}
