--- a/usuarios/templates/usuarios/editar-contrasenia.html
+++ b/usuarios/templates/usuarios/editar-contrasenia.html
@@ -6,10 +6,6 @@
 
 {% endblock title %} 
 
-{% block create %}
-active
-{% endblock create %}
-
 {% block contenido %}
 
 <section class="page-section" id="services">
@@ -18,21 +14,24 @@ active
   <div class="container-xl">
 
     <div class="text-center">
-      <h2 class="section-heading text-uppercase">Registrar Productos</h2>
+      <h2 class="section-heading text-uppercase">Cambiar Contraseña</h2>
       <h3 class="section-subheading text-muted">
-        Registro de Productos para la venta
+        Cambie su Contraseña
       </h3>
     </div>
 
-    <form action={% url "registrar_producto" %} method="POST" enctype='multipart/form-data'>
-      {% csrf_token %} {{formulario}}
+    <form action={% url "editar_usuario" %} method="POST">
+      {% csrf_token %} 
+      
+      {{form}}
 
       <br />
 
       <div class="d-grid gap-2">
-        <input class="btn btn-primary btn-xl text-uppercase" type="submit" value="Registrar" />
+        <input class="btn btn-primary btn-xl text-uppercase" type="submit" value="Guardar Contraseña" />
       </div>
     </form>
+
   </div>
 </section>
 
