--- a/usuarios/templates/usuarios/editar_usuario.html
+++ b/usuarios/templates/usuarios/editar_usuario.html
@@ -6,10 +6,6 @@
 
 {% endblock title %} 
 
-{% block create %}
-active
-{% endblock create %}
-
 {% block contenido %}
 
 <section class="page-section" id="services">
@@ -18,21 +14,23 @@ active
   <div class="container-xl">
 
     <div class="text-center">
-      <h2 class="section-heading text-uppercase">Registrar Productos</h2>
+      <h2 class="section-heading text-uppercase">Editar Perfil</h2>
       <h3 class="section-subheading text-muted">
-        Registro de Productos para la venta
+        Edita tu Perfil
       </h3>
     </div>
 
-    <form action={% url "registrar_producto" %} method="POST" enctype='multipart/form-data'>
+    <form action={% url "editar_usuario" %} method="POST" enctype='multipart/form-data'>
       {% csrf_token %} {{formulario}}
 
       <br />
 
       <div class="d-grid gap-2">
-        <input class="btn btn-primary btn-xl text-uppercase" type="submit" value="Registrar" />
+        <input class="btn btn-primary btn-xl text-uppercase" type="submit" value="Guardar Cambios" />
       </div>
     </form>
+
+    <a href={% url "editar_contrasenia" %}>Cambiar Contraseña</a>
   </div>
 </section>
 
