--- a/usuarios/templates/usuarios/registro_usuario.html
+++ b/usuarios/templates/usuarios/registro_usuario.html
@@ -6,10 +6,6 @@
 
 {% endblock title %} 
 
-{% block create %}
-active
-{% endblock create %}
-
 {% block contenido %}
 
 <section class="page-section" id="services">
@@ -18,13 +14,13 @@ active
   <div class="container-xl">
 
     <div class="text-center">
-      <h2 class="section-heading text-uppercase">Registrar Productos</h2>
+      <h2 class="section-heading text-uppercase">Registrar Usuario</h2>
       <h3 class="section-subheading text-muted">
-        Registro de Productos para la venta
+        Regristrar Usaario
       </h3>
     </div>
 
-    <form action={% url "registrar_producto" %} method="POST" enctype='multipart/form-data'>
+    <form action={% url "registro_usuario" %} method="POST">
       {% csrf_token %} {{formulario}}
 
       <br />
